--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ditdot-dev/vue-flow-form": "^2.1.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
