--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "choose-for-me",
+  "name": "xmr-donate",
+  "homepage": "https://dginovker.github.io/XMRWhichProjectToDonateTo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@ditdot-dev/vue-flow-form": "^2.1.0",
     "core-js": "^3.6.5",
+    "gh-pages": "^3.2.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
