--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ditdot-dev/vue-flow-form": "^2.1.0",
     "core-js": "^3.6.5",
+    "firebase": "^9.1.3",
     "gh-pages": "^3.2.3",
     "vue": "^3.0.0"
   },
