--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "https://dginovker.github.io/XMRWhichProjectToDonateTo",
   "version": "0.1.0",
   "private": true,
+  "license": "AGPL",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
