--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "firebase": "^9.1.3",
     "gh-pages": "^3.2.3",
+    "qrcode.vue": "^3.3.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
